# ai-trading-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  notes.md  pyproject.toml  sitecustomize.py  workflow.mmd  workflow_optimized.mmd
scripts/: debug_fundemental.py  debug_langgraph.py  debug_news.py
tradingagents/api/: main.py
tradingagents/api/routers/: decisions.py  mcp.py  research.py  status.py
tradingagents/api/schemas/: common.py  decisions.py  research.py
tradingagents/config/: defaults.py  logging_config.py  providers.py
tradingagents/dashboard/: app.py
tradingagents/dashboard/components/: chart_section.py  decision_card.py  fundamentals_section.py  news_section.py
tradingagents/dashboard/utils/: api_client.py  formatters.py
tradingagents/data/adapters/: cache.py  fundamentals_av.py  macro_av.py  news_general_av.py  news_policy_us.py  prices_yf.py
tradingagents/data/transforms/: cleaners.py  indicators.py
tradingagents/langgraph/: builder.py  builder_consolidate.py  graph.py  runner_langgraph.py  state.py
tradingagents/langgraph/personas/: base_persona.py  data_agents.py  domain_analysts.py  research_agents.py  trader_agents.py
tradingagents/langgraph/prompts/: bear_researcher.txt  bull_researcher.txt  flow_analyst.txt  fundamental_analyst.txt  macro_analyst.txt  research_referee.txt  risk_judge.txt  (+5 more)
tradingagents/mcp/: engine.py
tradingagents/models/: decisions.py  state.py  types.py
tradingagents/services/: llm_service.py  orchestrator.py
tradingagents/utils/: report_paths.py  report_writer.py  step_tracker.py
(+1 files in other folders)
